--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==2.1
+Django==2.1.11
 djangorestframework==3.10.3
 django-filter==2.2.0
 Markdown==3.1.1
@@ -10,3 +10,4 @@ python-decouple==3.1
 dj-database-url==0.5
 dj-static==0.0.6
 gunicorn==19.9
+aiohttp[speedups]==3.6.0
